# cocaine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: embed_resource.cmake
include/: cocaine.h  gl.h  imconfig_user.h
include/imgui/: README  imconfig.h
include/imgui/misc/freetype/: imgui_freetype.cpp  imgui_freetype.h
lib/: glfw3.lib
overlay/: index.html  itemtype.ts  style.css
overlay/ft/: freetype.d.ts  freetype.js  freetype.wasm  index.js
src/: bmain.cpp  bmain.h  main.cpp
src/cef/: BrowserView.cpp  BrowserView.hpp  CEFGLWindow.cpp  CEFGLWindow.hpp  GLCore.cpp  GLCore.hpp  GLWindow.cpp  GLWindow.hpp  app.cpp  app.h  v8handler.cpp  v8handler.h
src/config/: Color.cpp  Color.h  config.cpp  config.h  keybinds.cpp  keybinds.h
src/features/: esp.cpp  features.h
src/hid/: hid.cpp  hid.h  hid_def.h
src/render/: render.cpp  render.h  rimg.cpp  rimg.h  window.cpp  window.h
src/sdk/: actor.cpp  actor.h  driver.cpp  driver.h  names.cpp  names.h  offsets.h  rev.h  rp.h  sdk.cpp  sdk.h  ue.h  vector.cpp  vector.h  xxh64.hpp
